# ChangeLog for dev-lang/go
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/go/ChangeLog,v 1.26 2013/12/16 12:12:11 naota Exp $

  16 Dec 2013; Naohiro Aota <naota@gentoo.org> go-1.2.ebuild:
  Add ~x86-fbsd. #494418

*go-1.2 (14 Dec 2013)

  14 Dec 2013; William Hubbs <williamh@gentoo.org>
  +files/go-1.2-no-Werror.patch, +go-1.2.ebuild:
  version bump for #493088.

  28 Oct 2013; William Hubbs <williamh@gentoo.org> -go-1.1.1.ebuild:
  remove old version

  23 Oct 2013; William Hubbs <williamh@gentoo.org> go-1.1.2.ebuild:
  amd64 and x86 stable for #487112, approved by ago.

  20 Oct 2013; Markus Meier <maekke@gentoo.org> go-1.1.2.ebuild:
  arm stable, bug #487112

  15 Aug 2013; William Hubbs <williamh@gentoo.org>
  -files/go-1.1-no-Werror.patch, -go-1.1.ebuild:
  remove old version

*go-1.1.2 (15 Aug 2013)

  15 Aug 2013; William Hubbs <williamh@gentoo.org>
  +files/go-1.1.2-no-Werror.patch, +go-1.1.2.ebuild:
  version bump for #480842

  06 Aug 2013; William Hubbs <williamh@gentoo.org> go-1.1.1.ebuild:
  Stable for x86 wrt #476564

  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> go-1.1.1.ebuild:
  Stable for arm, wrt bug #476564

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> go-1.1.1.ebuild:
  Stable for amd64, wrt bug #476564

*go-1.1.1 (14 Jun 2013)

  14 Jun 2013; William Hubbs <williamh@gentoo.org> +go-1.1.1.ebuild,
  +files/go-1.1.1-no-Werror.patch:
  version bump for #473150

  20 May 2013; William Hubbs <williamh@gentoo.org>
  -files/go-1.0.3-hardened.patch, -files/go-1.0.3-no-Werror.patch,
  -go-1.0.3.ebuild:
  remove old version

  20 May 2013; William Hubbs <williamh@gentoo.org> go-1.1.ebuild,
  go-9999.ebuild:
  fix QA_MULTILIB_PATHS for bug #463546, thanks to Peter Volkov <pva@gentoo.org>

*go-1.1 (17 May 2013)

  17 May 2013; William Hubbs <williamh@gentoo.org> +go-1.1.ebuild,
  go-9999.ebuild, +files/go-1.1-no-Werror.patch:
  version bump for bug #469762. Also sync live ebuild.
