@@ -8,23 +8,13 @@ DIST go1.1.2.src.tar.gz 9049357 SHA256 ffc7b3b46909add09cad8213d76dba34e92cc8f8e
 DIST go1.2.src.tar.gz 9519109 SHA256 9ab83fb8eafe39f4204ef0f8e84e5ff7e8f1d533ddb05f51e6dc81503e8c0ae4 SHA512 c5ded60ba6db97107669146e1723fa5efbd89eb7432a6584b831549fe19f257c658a7cad19ee0033e305eb360e84fd18e67a6445ad0f945166b4d7315adbae7f WHIRLPOOL 1c0c87f01189b60c77e6b770d06bfb4ee06f1b133d9fc221d404a81ce344be5821c6c39c7e2ff91f6ac184e3d182d51a459adba91ce2bb424a54c2745e46e2c1
 EBUILD go-1.1.2.ebuild 3229 SHA256 bca4ee5d64884419cb3014144fde27c43e58f57c9a659ee381bc12284c89bbb3 SHA512 02f59ac79bc9623e50947bd6cf84245384a060496fc3e5c82832dfaa3bf86baf3159ed0766fdeddc6453042f37fa12627b2912e0acfe2829594bf4c320b34796 WHIRLPOOL 42a05429f9f377e0059b00f1003859ad5dbf5098ef51f6955c42c3edea1a2753a35c89f5f013a45214fad90f555164f521a8e8d39090503b53b829830a6c7a84
 EBUILD go-1.2.ebuild 3388 SHA256 6545cf9913e7913af8a2fa2b0a92ef3eefa0e94baab77f59908fedc7bd07ae9c SHA512 14df145d372aa2a8db3375a4e611a94d7f1b6c2ad13eec96bce740f3da88b6cce1b2b98dc3ae44b1572f38e10aa06584f39dd25295f3a2299ead07f46bafeeed WHIRLPOOL fff8ceb7ea1af6c5b77c20ec7e2dd7917f9da9726b6c9d9c52540990e8b2711a0a7224d4788521fb1731ed5623c7a17f68577b4c6ab1f0106d8ade657b0bf29a
-EBUILD go-9999.ebuild 3232 SHA256 44863a6978c5218cb3a30b6c917e74c1e62e5632d1fb42536f7dfe7fa1200d52 SHA512 7a9ac9c3c3bfd5d7a3497c8134f2abc03a4ea5426d323f3ea0606e1428289136d23a0c04ea08eb52ec1e5af85c2c1fa0e0d1947823537fa2a3e53ec3f7c722e6 WHIRLPOOL 1757d1b881a0bf7fe7e59a9c18953beb296cfb24f395a548ff935ae4ebdd5e7914cb902f631bd6c74c49419a012838978e66c2bd43eeb0066b15b87053a3b0cd
-MISC ChangeLog 3905 SHA256 0dbb1c6ec43676d853c1ba5347a09d7790c9c9d6054ee879d5b453a525103400 SHA512 d241ae42339e930e9132ab52f59377b6e8ef50d3fba4bf721b4cf9c194173d798b997d05a7e98309e832e00d448600a1f2e84b38e487befb52d0170e73ccd870 WHIRLPOOL 5b88d88044b3a928b5a1e9c5a084426c7dfb6b0c11d82baf6f74945118d8fd7ece7a834af406aac0eba4b85f80ac7d88282b33cf80364a3eac11b94f2fec95f9
+EBUILD go-9999.ebuild 3393 SHA256 32971d2433042d4014647876f7c3ba80004694341e53c91d78c24871b02b482a SHA512 ea0c65d65eea5abffb813be758de0709915996f94f5ea189c45122fc2c50f8b7aa85398bd351a8b157785b703ef8d07f95fd912d50df719f40d4b6684dd00236 WHIRLPOOL b654a2bd1f79d009f88e11c1267f4ef747374290da6d8ea6b120551c64bb1ceefe8c75c5cbdf95059ad459a320237dd892871ccfcc3f5dd864d80a33bc9ddfb5
+MISC ChangeLog 3995 SHA256 081d0aa8d885bf05baf941ef3b1aba48311e202a3bb8c3eba16a6b51d7be48ac SHA512 4532ea00c9deac194ccef43291f2219c3fc18873491d751ae63d6949305e5ead4cfbb87caffcfb0adcca94044aa9d77ac60de97917336514dd8a531d23510435 WHIRLPOOL 501ccca277a83a905903af0833cddd04fa2c4585f1d04e45334bb2f66cd063da65a4411a1d135494d10be57f1446aec5cc67fefd2671f353a5dc71746c1f2ce5
 MISC metadata.xml 448 SHA256 d53ad6b454d72353e0308a91a989a1a3345ae97c0199748dee1862576ad4476a SHA512 0c5fb551437353e87f87c91e576ef224b770f686700150c19e7f34e6903ba26910293bb74db9732a220006b873113662464646dd96e61503e4aa90cc84e14f75 WHIRLPOOL b3846a0fad8844ad7ec961b512cb12a9d588bfac28b2dc53798399ac8628ccbf6c06c5666b03eabef05b0acb0cea04d563252eaaa893341c5b3fe59475ffdab5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSru4oAAoJEDYO1FT4VRUUY74P/3clLKWiSDYWNw6uko/RKScC
-BVxkuTIFmikYhMHU4d+sIwSIGsEv3wQgnoq5SjOYjq+YDlt4HSXiwrHoSIKIcrnW
-h69cQmSJRLlq0MUYUhAknMW/KnYfUiMkYwlxUNIvWt4lRgrJ+6agkjNgi1GOJIUj
-oisNEIaXedspHATprWrSJ8gZHtVt9iI4m9/b1Pn2YE4B4KgsQ0kkE0TOVuMIZi+p
-Xfb0Afnxv/OmMt4XwKUSoWpNyT15HsrN1impUTuzXlw+CUltS/0SHKXPMuqGWB0l
-YbUtEaXJNWhvkSVaZDWiAoOM78PYSbRIx6F0VYcMgd6PhdESUDJBLorJ2D6Xcc9F
-9WCheFl7a4CdSqmjO9c90mKEvxKTq+TcoAOnUWMmujzmb6j9daCuvOuljZ/1LZw3
-MG4gO9Td0lEag/Ck26X417GeHxMzMoMnt29FmkW+qh+uLUC/D2/Rih/jd1KHVEM3
-xn05I6mlTYr6g3j3ylUxKBq2CWI7vrYYe9C0QU0MfzB4S1ZsDtiXb+WR3vqJTXrA
-cjupKOpfCv+9slCS91astYetIGmWMtI5SarUiztz/QV2XNLmUCiiJ0Ej08BppKIm
-8qQYmaXjYwGUasnQppzJRb/G3VzWHWncIrFbG7FYKLB9YDfpFJmXUhdPbvAbarOq
-99IojlO9daDDbX3HAcsS
-=SB0J
+iEYEAREIAAYFAlKwnvQACgkQblQW9DDEZThjsACfaFSDSgZXjiTFXaUowvWhtMoy
+ZVoAnjnb3SIOkvsfswYtzM5RU8mhxyDs
+=7I5b
 -----END PGP SIGNATURE-----
