@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/go
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/go/ChangeLog,v 1.26 2013/12/16 12:12:11 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/go/ChangeLog,v 1.27 2013/12/17 18:39:32 williamh Exp $
+
+  17 Dec 2013; William Hubbs <williamh@gentoo.org> go-9999.ebuild:
+  sync live ebuild
 
   16 Dec 2013; Naohiro Aota <naota@gentoo.org> go-1.2.ebuild:
   Add ~x86-fbsd. #494418
